--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body { /*corpo da Página no html*/
 .apresentacao_texto{
     font-size: 1.5rem;
     font-family: var(--fonte-segundaria);
+    padding-right: 50px;
 }
 
 .apresentacao_links{
